--- a/src/input.css
+++ b/src/input.css
@@ -19,14 +19,42 @@
     @apply flex justify-between items-center;
   }
   .header__nav{
-    @apply flex flex-row gap-[40rem] items-center;
+    /* @apply flex flex-col md:flex-row gap-5 md:gap-[7rem] lg:gap-[30rem] items-center
+    fixed md:relative w-full md:w-auto max-h-full overflow-hidden right-0 top-[6.2rem] md:top-auto
+    bg-white h-full md:h-auto; */
+
+    @apply flex max-h-full h-full bg-white fixed w-full flex-col top-[6.2rem] right-[-100%] items-center gap-5 overflow-hidden
+    md:max-h-none md:h-auto md:relative md:w-auto md:flex-row md:top-auto md:gap-20 xl:gap-[30rem] md:right-auto ease-in-out duration-700;
+  }
+  .header__nav.open{
+    @apply right-0 z-50 overflow-y-hidden ease-in-out duration-700;
   }
   .header__nav ul{
-    @apply flex gap-5 items-center;
+    @apply flex flex-col md:flex-row gap-5 items-center;
   }
   .header__nav ul li a{
     @apply text-base font-bold text-primary hover:text-secondary;
   }
+
+
+  .toggle__menu{
+    @apply flex flex-col gap-1 z-50
+    md:hidden;
+  }
+  .toggle__menu span{
+    @apply content-["*"] bg-primary w-10 h-1 rounded-lg 
+    inline-block ease-in-out duration-700;
+  }
+  .toggle__menu span:last-child{
+    @apply w-7 ease-in-out duration-700;
+  }
+  .toggle__menu.open span{
+    @apply w-7 ease-in-out duration-700;
+  }
+  .toggle__menu.open span:last-child{
+    @apply w-10 ease-in-out duration-700;
+  }
+
   .homeProperties__card{
     @apply bg-white w-fit;
   }
@@ -73,6 +101,40 @@
 
   .footer{
     @apply py-7 font-light text-white bg-primary;
+  }
+
+  .aboutOffer__card{
+    @apply flex flex-col items-center justify-center my-5 bg-gray-200
+    md:flex-row md:gap-5 shadow-lg;
+  }
+  .aboutOffer__card__details{
+    @apply px-5 py-10 md:py-2;
+  }
+  .aboutOffer__card img{
+    @apply w-full md:w-72 md:h-96 md:object-cover lg:w-auto lg:h-auto;
+  }
+  .aboutOffer__card__details h4{
+    @apply text-xl font-bold lg:text-3xl;
+  }
+  .aboutOffer__card__details p{
+    @apply mt-5 text-justify;
+  }
+
+  .aboutProperties__card{
+    @apply flex flex-col items-center justify-center my-5
+    md:flex-row md:gap-5;
+  }
+  .aboutProperties__card__details{
+    @apply  py-10 md:py-2;
+  }
+  .aboutProperties__card img{
+    @apply w-full md:w-80 md:h-[22rem] object-cover md:object-cover lg:w-[30rem] lg:h-72;
+  }
+  .aboutProperties__card__details h4{
+    @apply text-xl font-bold lg:text-3xl;
+  }
+  .aboutProperties__card__details p{
+    @apply my-5 text-justify xl:my-8 xl:max-w-[50rem];
   }
   
 }
