--- a/src/input.css
+++ b/src/input.css
@@ -103,6 +103,7 @@
     @apply py-7 font-light text-white bg-primary;
   }
 
+
   .aboutOffer__card{
     @apply flex flex-col items-center justify-center my-5 bg-gray-200
     md:flex-row md:gap-5 shadow-lg;
@@ -120,7 +121,7 @@
     @apply mt-5 text-justify;
   }
 
-  .aboutProperties__card{
+  /* .aboutProperties__card{
     @apply flex flex-col items-center justify-center my-5
     md:flex-row md:gap-5;
   }
@@ -135,6 +136,66 @@
   }
   .aboutProperties__card__details p{
     @apply my-5 text-justify xl:my-8 xl:max-w-[50rem];
+  } */
+
+  .properties__item{
+    @apply grid grid-cols-1 gap-5 items-center
+    lg:grid-cols-2;
+  }
+  .properties__item img{
+    @apply w-full;
+  }
+  .properties__item h4{
+    @apply text-xl font-bold;
+  }
+  .properties__item p{
+    @apply py-5 text-justify;
+  }
+  .properties__item a{
+    @apply inline-block text-primary
+    hover:text-secondary;
+  }
+
+  /* .singleProperties__wrapper h5{
+    @apply text-xl font-bold;
+  } */
+  
+  /* Single Properties (Riverside) */
+  .singleProperties__wrapper {
+    @apply grid grid-cols-1 gap-14
+    lg:grid-cols-[2fr_1fr];
+  }
+
+  .singleProperties__card {
+    @apply flex gap-5 mb-7;
   }
   
+  .singleProperties__card__details h6{
+    @apply text-base font-bold;
+  } 
+
+  .singleProperties__card__details p{
+    @apply my-[1rem];
+  } 
+  
+  .singleProperties__card__details{
+    @apply ml-3 max-w-80;
+  }
+
+
+  /* Contact Page */
+  .contact__details__card {
+    @apply flex flex-row items-center shadow-lg rounded-md p-2 mb-5 w-96 gap-1;
+  }
+  .contact__details__card i{
+    @apply text-white bg-primary rounded-full p-2 w-14 h-14 text-center justify-center;
+  }
+
+  .contact__details__card h5{
+    @apply font-bold;
+  }
+
+  .contact__details .contact__details__card:last-child{
+    @apply mb-24;
+  }
 }
