--- a/src/input.css
+++ b/src/input.css
@@ -55,6 +55,7 @@
     @apply w-10 ease-in-out duration-700;
   }
 
+  
   .homeProperties__card{
     @apply bg-white w-fit;
   }
@@ -184,18 +185,20 @@
 
 
   /* Contact Page */
-  .contact__details__card {
-    @apply flex flex-row items-center shadow-lg rounded-md p-2 mb-5 w-96 gap-1;
+   .contact__details__item {
+    @apply flex gap-5 items-center bg-white shadow-md w-96 py-4 px-3 mb-5;
   }
-  .contact__details__card i{
-    @apply text-white bg-primary rounded-full p-2 w-14 h-14 text-center justify-center;
+  .contact__details__item p > span > i{
+    @apply w-6 text-center;
   }
-
-  .contact__details__card h5{
-    @apply font-bold;
+  .contact__details__item p > span {
+    @apply bg-primary text-white py-2 px-3 text-2xl rounded-full;
   }
-
-  .contact__details .contact__details__card:last-child{
-    @apply mb-24;
+  .contact__details__item h6 {
+    @apply text-base font-bold;
+  }
+  .contact__form input,
+  textarea {
+    @apply border border-black px-4 py-3 rounded-lg w-full placeholder:font-medium placeholder:text-black mb-5;
   }
 }
